--- a/css/styles.css
+++ b/css/styles.css
@@ -162,8 +162,8 @@ img {
   bottom: -1px;
   display: block;
   border-radius: 2px;
-width: 48px;
-height: 4px;
+  width: 48px;
+  height: 4px;
   background-color: #404bbf;
 }
 
@@ -453,13 +453,9 @@ height: 4px;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
   padding: 32px 16px;
-  /* transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  
 }
 
-/* .portfolio-item:hover .portfolio-thumb,
-.portfolio-item:focus .portfolio-thumb {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);  
-} */
 
 /* ----------   ----------  */
 
@@ -506,7 +502,6 @@ height: 4px;
 
 .footer-sn-list {
   display: flex;
-  
   justify-content: center;
   gap: 16px;
 }
@@ -534,4 +529,340 @@ height: 4px;
 .footer-sn-icon {
   fill: #f4f4fd;
 }
+
+.subscribe {
+  /* display: block; */
+  margin-left: auto;
+  width: 453px;
+height: 80px;
+ 
+
+}
+
+.subscribe-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.subscribe-field {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* gap: 24px; */
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.subscribe-input {
+  outline: none;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  background-color: #2e2f42;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  margin-right: 24px;
+}
+
+.subscribe-input:focus {
+  border: 1px solid #31d0aa;
+}
+
+.subscribe-input::placeholder {
+  font: 400 12px / 2 "Roboto", sans-serif;
+  letter-spacing: 0.04em;
+  color: #fff;
+  /* padding: 8px 16px; */
+}
+
+.subscribe-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #31d0aa;
+}
+
 /* ----------   ----------  */
+
+ /* ----------   MODAL----------  */
+ 
+ .backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  z-index: 999;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+
+.backdrop.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+ .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  padding: 72px 24px 24px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  display: flex;
+  flex-direction: column;
+ }
+
+ .modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  cursor: pointer;
+  transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+ .modal-close-btn:hover,
+ .modal-close-btn:focus {
+  border: none;
+  fill: #FFFFFF;
+  background-color: #404BBF;
+ }
+
+.close-btn-icon {
+ } 
+
+.modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2E2F42;
+  margin-bottom: 16px;
+}
+
+ .contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-field {
+}
+.form-field {
+  margin-bottom: 8px;
+}
+
+.form-field-name {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8E8F99;
+  margin-bottom: 4px;
+}
+
+.contact-form-wrapper {
+  position: relative;
+}
+
+.contact-form-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding-left: 38px;
+  outline: none;
+  cursor: pointer;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:hover,
+.contact-form-input:focus {
+  border: 1px solid #4D5AE5;
+}
+
+.form-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:hover+.form-icon,
+.contact-form-input:focus+.form-icon {
+ fill: #4D5AE5;
+}
+
+.contact-form-message {
+  font-family: "roboto", sans-serif; 
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  min-height: 120px;
+  padding: 8px 16px;
+  resize: none;
+  outline: none;
+  cursor: pointer;
+  margin-bottom: 16px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-message:hover,
+.contact-form-message:focus {
+  border: 1px solid #4D5AE5;
+  padding: 8px 16px;
+}
+
+.contact-form-message::placeholder { 
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.policy-text {
+  font: 400 12px / 1.16667 "Roboto", sans-serif;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.policy-terms {
+  font: 400 12px / 1.33333 "Roboto", sans-serif;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.form-checkbox {
+  display: flex;
+  align-items: start;
+  margin-bottom: 24px;
+}
+
+.policy-text {
+  position: relative;
+  display: flex;
+  margin-left: 24px;
+
+  cursor: pointer;
+}
+
+.icon-check {
+  position: absolute;
+  top: 0;
+  left: -24px;
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  fill: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-checkbox:checked + .policy-text > .icon-check {
+  background-color: #404bbf;
+  border: 1px solid #404bbf;
+  fill: #f4f4fd;
+}
+
+
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: none;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.policy-text {
+  font: 400 12px / 1.16667 "Roboto", sans-serif;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.policy-terms {
+  font: 400 12px / 1.33333 "Roboto", sans-serif;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.submit-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #404bbf;
+}
