--- a/css/styles.css
+++ b/css/styles.css
@@ -559,15 +559,27 @@ height: 80px;
 
 .subscribe-input {
   outline: none;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #ffffff;
+  border: 1px solid #ffffff;
   border-radius: 4px;
   width: 264px;
   height: 40px;
-  padding: 8px 16px;
-  background-color: #2e2f42;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  margin-right: 24px;
+  padding-left: 16px;
+  background-color: transparent;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  /* margin-right: 24px; */
+}
+
+.subscribe-email{
+  /* gap: 24px; */
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
 }
 
 .subscribe-input:focus {
@@ -577,8 +589,7 @@ height: 80px;
 .subscribe-input::placeholder {
   font: 400 12px / 2 "Roboto", sans-serif;
   letter-spacing: 0.04em;
-  color: #fff;
-  /* padding: 8px 16px; */
+  color: #ffffff;
 }
 
 .subscribe-btn {
@@ -586,26 +597,31 @@ height: 80px;
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  gap: 16px;
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #fff;
+  color: #ffffff;
   background-color: #4d5ae5;
+  border: none;
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
+  cursor: pointer;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-icon {
+  margin-left: 16px;
 }
 
 .subscribe-btn:hover,
 .subscribe-btn:focus {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #31d0aa;
+  background-color: #31d0aa;
 }
 
 /* ----------   ----------  */
@@ -656,7 +672,7 @@ height: 80px;
   height: 24px;
   background-color: #e7e9fc;
   cursor: pointer;
-  transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -670,6 +686,7 @@ height: 80px;
  }
 
 .close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  } 
 
 .modal-title {
@@ -689,33 +706,42 @@ height: 80px;
 
 .contact-form-field {
 }
-.form-field {
+
+/* .form-input-area :not(:last-child) {
   margin-bottom: 8px;
-}
+} */
+
+/* .form-input-area :last-child {
+  margin-bottom: 16px;
+} */
 
 .form-field-name {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8E8F99;
+  display: block;
   margin-bottom: 4px;
 }
 
 .contact-form-wrapper {
   position: relative;
+  margin-bottom: 0;
 }
 
 .contact-form-input {
+  margin-bottom: 8px;
+  background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 360px;
   height: 40px;
   padding-left: 38px;
-  outline: none;
+  outline: transparent;
   cursor: pointer;
 
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-input:hover,
@@ -744,17 +770,19 @@ height: 80px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 360px;
   min-height: 120px;
   padding: 8px 16px;
   resize: none;
-  outline: none;
+  outline: transparent;
   cursor: pointer;
   margin-bottom: 16px;
 
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-message:hover,
@@ -770,6 +798,7 @@ height: 80px;
 .policy-text {
   font: 400 12px / 1.16667 "Roboto", sans-serif;
   letter-spacing: 0.04em;
+  line-height: 1.17;
   color: #8e8f99;
 }
 
@@ -800,18 +829,18 @@ height: 80px;
   left: -24px;
   width: 16px;
   height: 16px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   border-radius: 2px;
   fill: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-checkbox:checked + .policy-text > .icon-check {
   background-color: #404bbf;
-  border: 1px solid #404bbf;
+  border: none
   fill: #f4f4fd;
 }
 
