--- a/css/styles.css
+++ b/css/styles.css
@@ -622,11 +622,12 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  z-index: 999;
+  z-index: 10;
 
   opacity: 0;
   pointer-events: none;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 .backdrop.is-open {
@@ -647,6 +648,8 @@ img {
   background-color: #fcfcfc;
   display: flex;
   flex-direction: column;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
  }
 
  .modal-close-btn {
@@ -659,7 +662,9 @@ img {
   height: 24px;
   background-color: #e7e9fc;
   cursor: pointer;
-  transition: background-color, 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -694,14 +699,6 @@ img {
 .contact-form-field {
 }
 
-/* .form-input-area :not(:last-child) {
-  margin-bottom: 8px;
-} */
-
-/* .form-input-area :last-child {
-  margin-bottom: 16px;
-} */
-
 .form-field-name {
   font-weight: 400;
   font-size: 12px;
@@ -714,11 +711,11 @@ img {
 
 .contact-form-wrapper {
   position: relative;
-  margin-bottom: 0;
+  margin-bottom: 8px;
+
 }
 
 .contact-form-input {
-  margin-bottom: 8px;
   background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -761,7 +758,7 @@ img {
   background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  width: 360px;
+  width: 100%;
   min-height: 120px;
   padding: 8px 16px;
   resize: none;
