--- a/css/styles.css
+++ b/css/styles.css
@@ -696,7 +696,8 @@ img {
   flex-direction: column;
 }
 
-.contact-form-field {
+.form-field {
+  margin-bottom: 8px;
 }
 
 .form-field-name {
@@ -706,12 +707,12 @@ img {
   letter-spacing: 0.04em;
   color: #8E8F99;
   display: block;
-  margin-bottom: 4px;
+  /* margin-bottom: 4px; */
 }
 
 .contact-form-wrapper {
   position: relative;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 
 }
 
@@ -748,6 +749,10 @@ img {
  fill: #4D5AE5;
 }
 
+.form-comment {
+  margin-bottom: 16px;
+}
+
 .contact-form-message {
   font-family: "roboto", sans-serif; 
   font-weight: 400;
@@ -764,7 +769,7 @@ img {
   resize: none;
   outline: transparent;
   cursor: pointer;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -780,14 +785,22 @@ img {
 }
 
 .policy-text {
-  font: 400 12px / 1.16667 "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
   letter-spacing: 0.04em;
   line-height: 1.17;
   color: #8e8f99;
+  position: relative;
+  display: flex;
+  margin-left: 24px;
+  cursor: pointer;
 }
 
 .policy-terms {
-  font: 400 12px / 1.33333 "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  line-height: 1.17;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   letter-spacing: 0.04em;
@@ -799,14 +812,6 @@ img {
   display: flex;
   align-items: start;
   margin-bottom: 24px;
-}
-
-.policy-text {
-  position: relative;
-  display: flex;
-  margin-left: 24px;
-
-  cursor: pointer;
 }
 
 .icon-check {
@@ -826,7 +831,7 @@ img {
 
 .contact-form-checkbox:checked + .policy-text > .icon-check {
   background-color: #404bbf;
-  border: none
+  border: none;
   fill: #f4f4fd;
 }
 
