--- a/css/styles.css
+++ b/css/styles.css
@@ -707,7 +707,7 @@ img {
   letter-spacing: 0.04em;
   color: #8E8F99;
   display: block;
-  /* margin-bottom: 4px; */
+  margin-bottom: 4px;
 }
 
 .contact-form-wrapper {
@@ -796,7 +796,7 @@ img {
   cursor: pointer;
 }
 
-.policy-terms {
+.policy-text a {
   font-family: "Roboto", sans-serif;
   font-size: 12px;
   letter-spacing: 0.04em;
@@ -826,7 +826,7 @@ img {
   border-radius: 2px;
   fill: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-checkbox:checked + .policy-text > .icon-check {
