--- a/css/styles.css
+++ b/css/styles.css
@@ -826,8 +826,8 @@ img {
   width: 16px;
   height: 16px;
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   border-radius: 2px;
   fill: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
