--- a/css/styles.css
+++ b/css/styles.css
@@ -798,7 +798,7 @@ img {
   line-height: 1.17;
   color: #8e8f99;
   position: relative;
-  display: flex;
+  /* display: flex; */
   margin-left: 24px;
   cursor: pointer;
 }
