--- a/css/styles.css
+++ b/css/styles.css
@@ -814,7 +814,7 @@ img {
 }
 
 .form-checkbox {
-  display: inline-flex;
+  /* display: inline-flex; */
   align-items: start;
   margin-bottom: 24px;
 }
