--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ img {
 
 /* ---------- HERO----------  */
 .hero {
+  margin: 0 auto;
   max-width: 1440px;
   background: #2e2f42;
   display: block;
